--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -70,9 +70,6 @@
         <argument
             android:name="user"
             app:argType="com.psandroidlabs.chatapp.models.UserType" />
-        <action
-            android:id="@+id/action_chatFragment_to_imageFragment"
-            app:destination="@id/imageFragment" />
     </fragment>
     <fragment
         android:id="@+id/tictactoe"
@@ -83,11 +80,7 @@
         android:id="@+id/profileFragment"
         android:name="com.psandroidlabs.chatapp.fragments.ProfileFragment"
         android:label="Profile"
-        tools:layout="@layout/fragment_profile" >
-        <action
-            android:id="@+id/action_profileFragment_to_imageFragment"
-            app:destination="@id/imageFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/chatMembersFragment"
         android:name="com.psandroidlabs.chatapp.fragments.ChatMembersFragment"
